bin_PROGRAMS = Avengers Editor
Avengers_SOURCES = main.cpp exceptions.h\
					object.cpp object.h\
					staticobject.cpp staticobject.h\
					loader.cpp loader.h\
					graphengine.cpp graphengine.h\
					vertex.h vertex.cpp\
					boneobject.h boneobject.cpp
Editor_SOURCES = main_editor.cpp exceptions.h\
					object.cpp object.h\
					staticobject.cpp staticobject.h\
					loader.cpp loader.h\
					graphengine.cpp graphengine.h\
					vertex.h vertex.cpp\
					boneobject.h boneobject.cpp
Avengers_CXXFLAGS = -Wall
Editor_CXXFLAGS = -Wall
